--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -11,9 +11,8 @@
   },
   "dependencies": {
     "firebase": "^10.7.1",
-    "vex-qna-archiver": "^7.0.0"
-  },
-  "devDependencies": {
-    "@qnaplus/env": "^1.0.0"
+    "vex-qna-archiver": "^7.0.0",
+    "@qnaplus/env": "1.0.0"
+
   }
 }
