--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "references": [
     {
-      "path": "./bot/"
+      "path": "./packages/bot/"
     },
     {
-      "path": "./store"
+      "path": "./packages/store"
     }
   ],
   "files": [],
