--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
       "path": "./packages/bot/"
     },
     {
-      "path": "./packages/store"
+      "path": "./packages/store/"
     }
   ],
   "files": [],
