--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -6,13 +6,16 @@
   "author": "battlesqui_d",
   "license": "ISC",
   "volta": {
-    "node": "18.9.0",
+    "node": "20.11.0",
     "yarn": "1.22.19"
+  },
+  "scripts": {
+    "build": "npx tsc"
   },
   "dependencies": {
     "@qnaplus/env": "1.0.0",
     "firebase": "^10.7.1",
     "pino": "^8.17.2",
-    "vex-qna-archiver": "^7.0.0"
+    "vex-qna-archiver": "^7.1.1"
   }
 }
