--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@qnaplus/env",
+    "name": "@qnaplus/config",
     "version": "1.0.0",
     "description": "",
     "main": "dist/index.js",
