--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -13,7 +13,7 @@
     "build": "npx tsc"
   },
   "dependencies": {
-    "@qnaplus/env": "1.0.0",
+    "@qnaplus/config": "1.0.0",
     "firebase": "^10.7.1",
     "pino": "^8.17.2",
     "vex-qna-archiver": "^7.1.1"
