--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -10,7 +10,7 @@
     "yarn": "1.22.19"
   },
   "scripts": {
-    "build": "npx tsc",
+    "build": "yarn tsc --build",
     "start": "node dist/index.js | yarn pino-pretty"
   },
   "dependencies": {
@@ -20,6 +20,7 @@
     "pino": "^8.17.2"
   },
   "devDependencies": {
-    "pino-pretty": "^10.3.1"
+    "pino-pretty": "^10.3.1",
+    "vex-qna-archiver": "^7.1.1"
   }
 }
