--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "build": "yarn tsc --build",
-    "start": "node dist/index.js | yarn pino-pretty"
+    "start": "node dist/index.js",
+    "dev": "node dist/index.js | yarn pino-pretty"
   },
   "dependencies": {
     "@qnaplus/store": "1.0.0",
