--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -14,8 +14,9 @@
   },
   "dependencies": {
     "@qnaplus/config": "1.0.0",
+    "@supabase/supabase-js": "^2.39.3",
     "firebase": "^10.7.1",
     "pino": "^8.17.2",
-    "vex-qna-archiver": "^7.1.1"
+    "vex-qna-archiver": "^8.0.1"
   }
 }
