--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -15,8 +15,11 @@
   "dependencies": {
     "@qnaplus/config": "1.0.0",
     "@supabase/supabase-js": "^2.39.3",
-    "firebase": "^10.7.1",
+    "diff": "^5.1.0",
     "pino": "^8.17.2",
     "vex-qna-archiver": "^8.0.1"
+  },
+  "devDependencies": {
+    "@types/diff": "^5.0.9"
   }
 }
