--- a/services/updater/package.json
+++ b/services/updater/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@qnaplus/bot",
+  "name": "@qnaplus/updater",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
@@ -15,13 +15,10 @@
     "dev": "node dist/index.js | yarn pino-pretty"
   },
   "dependencies": {
-    "@qnaplus/store": "1.0.0",
-    "@sapphire/framework": "^4.6.0",
-    "discord.js": "^14.13.0",
+    "qnaplus": "1.0.0",
     "pino": "^8.17.2"
   },
   "devDependencies": {
-    "pino-pretty": "^10.3.1",
-    "vex-qna-archiver": "^8.1.1"
-  }
+    "pino-pretty": "^10.3.1"
+    }
 }
