--- a/services/web/package.json
+++ b/services/web/package.json
@@ -1,13 +1,28 @@
 {
-    "name": "@qnaplus/web",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "private": true,
-    "author": "battlesqui_d",
-    "license": "ISC",
-    "volta": {
-        "node": "20.11.0",
-        "yarn": "1.22.19"
-    }
+  "name": "web",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "primeflex": "^3.3.1",
+    "primevue": "^3.48.1",
+    "vue": "^3.4.15",
+    "vue-router": "4"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^5.0.3",
+    "typescript": "^5.2.2",
+    "unplugin-vue-components": "^0.26.0",
+    "vite": "^5.1.0",
+    "vue-tsc": "^1.8.27"
+  },
+  "volta": {
+    "node": "20.11.0",
+    "yarn": "1.22.19"
+  }
 }
