--- a/services/web/package.json
+++ b/services/web/package.json
@@ -17,8 +17,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.3",
+    "sass": "^1.71.1",
     "typescript": "^5.2.2",
-    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.1.0",
     "vue-tsc": "^1.8.27"
   },
