--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "bot:dev": "yarn workspace @qnaplus/bot run dev",
     "updater:start": "yarn workspace @qnaplus/updater run start",
     "updater:dev": "yarn workspace @qnaplus/updater run dev",
-    "store:populate": "yarn workspace @qnaplus/store run populate"
+    "store:populate": "yarn workspace @qnaplus/store run populate",
+    "web:dev": "yarn workspace @qnaplus/web run dev"
   },
   "volta": {
     "node": "20.11.0",
