--- a/services/web/package.json
+++ b/services/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "@qnaplus/web",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/integrations": "^10.8.0",
+    "fuse.js": "^7.0.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.48.1",
