--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,9 +21,13 @@ concurrency:
   group: 'pages'
   cancel-in-progress: true
 
+defaults:
+  run:
+    working-directory: services/web
+    
 jobs:
   # Single deploy job since we're just deploying
-  deploy:
+  deploy: 
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
