--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -8,7 +8,7 @@ on:
       - master
     paths:
       - .github/workflows/workflow.yml
-      - services/web
+      - services/web/**
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -51,7 +51,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          working-directory: 
           # https://github.com/actions/upload-pages-artifact/issues/74
           path: 'services/web/dist'
       - name: Deploy to GitHub Pages
