--- a/services/bot/package.json
+++ b/services/bot/package.json
@@ -15,10 +15,11 @@
     "dev": "node dist/index.js | yarn pino-pretty"
   },
   "dependencies": {
-    "qnaplus": "1.0.0",
+    "@qnaplus/logger": "1.0.0",
     "@sapphire/framework": "^4.6.0",
     "discord.js": "^14.13.0",
-    "pino": "^8.17.2"
+    "pino": "^9.0.0",
+    "qnaplus": "1.0.0"
   },
   "devDependencies": {
     "pino-pretty": "^10.3.1",
