--- a/.github/workflows/updater_image.yml
+++ b/.github/workflows/updater_image.yml
@@ -32,4 +32,5 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
+          file: services/updater/Dockerfile
           tags: battlesquid0101/qnaplus_updater:latest
