--- a/services/updater/package.json
+++ b/services/updater/package.json
@@ -10,7 +10,7 @@
     "yarn": "1.22.19"
   },
   "scripts": {
-    "build": "tsc --build --force",
+    "build": "tsc --build",
     "start": "node dist/index.js",
     "dev": "node dist/index.js | pino-pretty"
   },
