--- a/packages/qnaplus/package.json
+++ b/packages/qnaplus/package.json
@@ -6,7 +6,7 @@
     "author": "battlesqui_d",
     "license": "ISC",
     "scripts": {
-        "build": "npx tsc"
+        "build": "tsc --build"
     },
     "volta": {
         "node": "20.11.0",
