--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -10,7 +10,7 @@
     "yarn": "1.22.19"
   },
   "scripts": {
-    "build": "yarn tsc --build",
+    "build": "tsc --build",
     "updater": "node dist/services/update_service.js",
     "populate": "node dist/services/populate_service.js"
   },
