--- a/services/bot/Dockerfile
+++ b/services/bot/Dockerfile
@@ -3,9 +3,7 @@ FROM node:20.11.0-alpine3.19 as base
 WORKDIR /app
 
 # We only copy the dependencies we need
-COPY packages/config packages/config
-COPY packages/qnaplus packages/qnaplus
-COPY packages/store packages/store
+COPY packages packages
 
 COPY services/bot services/bot
 
