--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^2.39.3",
     "diff": "^5.1.0",
     "pino": "^8.17.2",
+    "tus-js-client": "^4.1.0",
     "vex-qna-archiver": "^10.0.0"
   },
   "devDependencies": {
