--- a/services/web/package.json
+++ b/services/web/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@vueuse/core": "^10.9.0",
     "@vueuse/integrations": "^10.8.0",
+    "@vueuse/rxjs": "^10.11.0",
     "deep-equal": "^2.2.3",
+    "dexie": "^4.0.7",
     "minisearch": "^6.3.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.48.1",
+    "rxjs": "^7.8.1",
     "virtua": "^0.28.0",
     "vue": "^3.4.15",
     "vue-router": "4"
