--- a/services/web/package.json
+++ b/services/web/package.json
@@ -25,12 +25,19 @@
   },
   "devDependencies": {
     "@types/deep-equal": "^1.0.4",
-    "@vitejs/plugin-vue": "^5.0.3",
+    "@vite-pwa/assets-generator": "^0.2.4",
+    "@vitejs/plugin-vue": "^5.0.4",
     "sass": "^1.71.1",
     "typescript": "^5.2.2",
     "vex-qna-archiver": "^10.0.0",
-    "vite": "^5.1.0",
-    "vue-tsc": "^1.8.27"
+    "vite": "^5.2.10",
+    "vite-plugin-pwa": "^0.20.0",
+    "vue-tsc": "^2.0.16",
+    "workbox-window": "^7.1.0"
+  },
+  "resolutions": {
+    "sharp": "0.32.6",
+    "sharp-ico": "0.1.5"
   },
   "volta": {
     "node": "20.11.0",
