wip: add vue draggable

--- a/services/web/package.json
+++ b/services/web/package.json
@@ -21,6 +21,7 @@
     "rxjs": "^7.8.1",
     "virtua": "^0.28.0",
     "vue": "^3.4.15",
+    "vue-draggable-plus": "^0.5.0",
     "vue-router": "4"
   },
   "devDependencies": {
