--- a/services/bot/package.json
+++ b/services/bot/package.json
@@ -16,13 +16,16 @@
   },
   "dependencies": {
     "@qnaplus/logger": "1.0.0",
-    "@sapphire/framework": "^4.6.0",
-    "discord.js": "^14.13.0",
+    "@sapphire/decorators": "^6.1.0",
+    "@sapphire/framework": "^5.2.1",
+    "@sapphire/plugin-subcommands": "^6.0.3",
+    "@sapphire/utilities": "^3.16.2",
+    "discord.js": "14.x",
     "pino": "^9.0.0",
     "qnaplus": "1.0.0"
   },
   "devDependencies": {
     "pino-pretty": "^10.3.1",
-    "vex-qna-archiver": "^10.0.0"
+    "vex-qna-archiver": "^10.1.0"
   }
 }
