feat: finish renotify commands

--- a/services/bot/package.json
+++ b/services/bot/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "build": "tsc --build",
+    "clean": "rm -rf dist tsconfig.tsbuildinfo",
     "start": "node dist/index.js",
     "dev": "node dist/index.js | pino-pretty"
   },
@@ -20,6 +21,7 @@
     "@sapphire/framework": "^5.2.1",
     "@sapphire/plugin-subcommands": "^6.0.3",
     "@sapphire/utilities": "^3.16.2",
+    "croner": "^8.0.2",
     "discord.js": "14.x",
     "pino": "^9.0.0",
     "qnaplus": "1.0.0"
