--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -12,8 +12,7 @@
   "scripts": {
     "build": "tsc --build",
     "populate": "node dist/populate.js",
-    "populate_with_metadata": "node dist/populate_with_metadata.js",
-    "update_storage": "node dist/update_storage.js"
+    "populate_with_metadata": "node dist/populate_with_metadata.js"
   },
   "dependencies": {
     "@qnaplus/config": "1.0.0",
