--- a/services/updater/package.json
+++ b/services/updater/package.json
@@ -12,14 +12,17 @@
   "scripts": {
     "build": "tsc --build",
     "start": "node dist/index.js",
-    "dev": "node dist/index.js | pino-pretty"
+    "dev": "node dist/index.js | pino-pretty",
+    "update_storage": "node dist/update_storage.js"
   },
   "dependencies": {
     "@qnaplus/logger": "1.0.0",
+    "vex-qna-archiver": "^10.1.0",
     "croner": "^8.0.2",
     "qnaplus": "1.0.0"
   },
   "devDependencies": {
-    "pino-pretty": "^10.3.1"
+    "pino-pretty": "^10.3.1",
+    "pino": "^9.0.0"
   }
 }
