--- a/.github/workflows/bot_image.yml
+++ b/.github/workflows/bot_image.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - .github/workflows/bot_image.yml
       - services/bot/**
+      - .env.vault
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
