--- a/.github/workflows/updater_image.yml
+++ b/.github/workflows/updater_image.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - .github/workflows/updater_image.yml
       - services/updater/**
+      - .env.vault
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
