--- a/.github/workflows/web_deploy.yml
+++ b/.github/workflows/web_deploy.yml
@@ -9,6 +9,7 @@ on:
     paths:
       - .github/workflows/web_deploy.yml
       - services/web/**
+      - .env.vault
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
