feat: add renotify list command

--- a/services/bot/package.json
+++ b/services/bot/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@qnaplus/logger": "1.0.0",
     "@sapphire/decorators": "^6.1.0",
+    "@sapphire/discord.js-utilities": "^7.3.0",
     "@sapphire/framework": "^5.2.1",
     "@sapphire/plugin-subcommands": "^6.0.3",
     "@sapphire/utilities": "^3.16.2",
