--- a/services/web/package.json
+++ b/services/web/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primevue/themes": "^4.0.0",
     "@vueuse/core": "^10.9.0",
     "@vueuse/integrations": "^10.8.0",
     "@vueuse/rxjs": "^10.11.0",
@@ -17,8 +18,9 @@
     "minisearch": "^6.3.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
-    "primevue": "^3.48.1",
+    "primevue": "^4.0.0",
     "rxjs": "^7.8.1",
+    "tailwindcss-primeui": "^0.3.4",
     "virtua": "^0.28.0",
     "vue": "^3.4.15",
     "vue-draggable-plus": "^0.5.0",
@@ -28,7 +30,11 @@
     "@types/deep-equal": "^1.0.4",
     "@vite-pwa/assets-generator": "^0.2.4",
     "@vitejs/plugin-vue": "^5.0.4",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
+    "primeclt": "^0.1.5",
     "sass": "^1.71.1",
+    "tailwindcss": "^3.4.6",
     "typescript": "^5.2.2",
     "vex-qna-archiver": "^10.1.0",
     "vite": "^5.2.10",
