--- a/services/web/package.json
+++ b/services/web/package.json
@@ -14,6 +14,7 @@
     "@vueuse/rxjs": "^10.11.0",
     "deep-equal": "^2.2.3",
     "dexie": "^4.0.7",
+    "htmlparser2": "^9.1.0",
     "minisearch": "^6.3.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
