--- a/services/web/package.json
+++ b/services/web/package.json
@@ -20,14 +20,17 @@
     "primeicons": "^6.0.1",
     "primevue": "^3.48.1",
     "rxjs": "^7.8.1",
+    "sanitize-html": "^2.13.0",
     "virtua": "^0.28.0",
     "vue": "^3.4.15",
     "vue-router": "4"
   },
   "devDependencies": {
     "@types/deep-equal": "^1.0.4",
+    "@types/sanitize-html": "^2.11.0",
     "@vite-pwa/assets-generator": "^0.2.4",
     "@vitejs/plugin-vue": "^5.0.4",
+    "domhandler": "^5.0.3",
     "sass": "^1.71.1",
     "typescript": "^5.2.2",
     "vex-qna-archiver": "^10.1.0",
