--- a/services/worker/package.json
+++ b/services/worker/package.json
@@ -1,12 +1,15 @@
 {
   "name": "@qnaplus/worker",
   "version": "1.0.0",
-  "main": "dist/index.js",
-  "license": "MIT",
   "scripts": {
     "dev": "wrangler dev"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20240729.0",
     "wrangler": "^3.68.0"
+  },
+  "volta": {
+    "node": "20.15.1",
+    "yarn": "1.22.19"
   }
 }
