--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,6 @@
 {
 	"image": "mcr.microsoft.com/devcontainers/universal:2",
 	"features": {
-		"ghcr.io/enricosecondulfo/devcontainer-features/volta:1": {},
-		"ghcr.io/devcontainers/features/node:1": {
-			"version": "20.11.0"
-		}
+		"ghcr.io/devcontainers-contrib/features/volta:1": {}
 	}
 }
