wip: supabase function

--- a/services/supabase/package.json
+++ b/services/supabase/package.json
@@ -2,17 +2,15 @@
   "name": "@qnaplus/worker",
   "version": "1.0.0",
   "scripts": {
+    "start": "supabase start",
+    "fn:local": "yarn start && supabase functions serve",
+    "fn:deploy": ""
   },
   "devDependencies": {
-    "@types/node": "^22.1.0",
     "supabase": "^1.187.10"
   },
   "volta": {
     "node": "20.15.1",
     "yarn": "1.22.19"
-  },
-  "dependencies": {
-    "hono": "^4.5.4",
-    "vex-qna-archiver": "^11.1.1"
   }
 }
