--- a/services/worker/package.json
+++ b/services/worker/package.json
@@ -5,13 +5,11 @@
       "dev": "wrangler dev"
     },
     "dependencies": {
-      "@crawlee/core": "^3.7.2",
-      "got-scraping": "^4.0.3",
-      "pino": "^8.17.2"
+      "ts-curl-impersonate": "^1.0.1"
     },
     "devDependencies": {
       "@cloudflare/workers-types": "^4.20240729.0",
-      "wrangler": "^3.68.0"
+      "wrangler": "^3.78.7"
     },
     "volta": {
       "node": "20.15.1",
