--- a/services/worker/wrangler.toml
+++ b/services/worker/wrangler.toml
@@ -1,5 +1,5 @@
 name = "precheck"
-compatibility_date = "08-05-2024"
+compatibility_date = "2024-09-17"
 main = "src/index.ts"
 node_compat = true
-# compatibility_flags = [ "nodejs_compat" ]
+# compatibility_flags = [ "nodejs_compat_v2" ]
