--- a/services/web/package.json
+++ b/services/web/package.json
@@ -21,22 +21,23 @@
     "primeicons": "^6.0.1",
     "primevue": "^4.0.0",
     "rxjs": "^7.8.1",
-    "tailwindcss-primeui": "^0.3.4",
     "sanitize-html": "^2.13.0",
+    "tailwindcss-primeui": "^0.3.4",
     "virtua": "^0.28.0",
     "vue": "^3.4.15",
     "vue-draggable-plus": "^0.5.0",
     "vue-router": "4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/deep-equal": "^1.0.4",
     "@types/sanitize-html": "^2.11.0",
     "@vite-pwa/assets-generator": "^0.2.4",
     "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.19",
+    "domhandler": "^5.0.3",
     "postcss": "^8.4.39",
     "primeclt": "^0.1.5",
-    "domhandler": "^5.0.3",
     "sass": "^1.71.1",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.2.2",
