--- a/packages/store/package.json
+++ b/packages/store/package.json
@@ -20,7 +20,7 @@
     "diff": "^5.1.0",
     "pino": "^8.17.2",
     "tus-js-client": "^4.1.0",
-    "vex-qna-archiver": "^12.0.0"
+    "@qnaplus/scraper": "^1.0.0"
   },
   "devDependencies": {
     "@types/diff": "^5.0.9"
