--- a/services/web/package.json
+++ b/services/web/package.json
@@ -41,7 +41,7 @@
     "sass": "^1.71.1",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.2.2",
-    "vex-qna-archiver": "^12.0.0",
+    "@qnaplus/scraper": "^1.0.0",
     "vite": "^5.2.10",
     "vite-plugin-pwa": "^0.20.0",
     "vue-tsc": "^2.0.28",
